Arc - Map feature push 1

--- a/client/src/app/arc-map-page/arc-map-page.component.html
+++ b/client/src/app/arc-map-page/arc-map-page.component.html
@@ -1,4 +1,5 @@
 <div class="map-container">
-    <p>Ar-Map-Page works!</p>
+    <p>Arc-Map-Page works!</p>
+    <p>Below is where the arc-map component will be called in //arc-map-page.component.html</p>
     <app-arc-map></app-arc-map>
 </div>
