--- a/client/src/app/arc-map/arc-map.component.html
+++ b/client/src/app/arc-map/arc-map.component.html
@@ -1,10 +1,11 @@
-<!-- <div id="viewDiv">
-  <arcgis-map item-id="604562cb499d4e1984b1aed11d961bec" (arcgisViewReadyChange)="arcgisViewReadyChange($event)">
-    <arcgis-expand>
-      <arcgis-search position="top-right"></arcgis-search>
-    </arcgis-expand>
-    <arcgis-legend position="bottom-left"></arcgis-legend>
-  </arcgis-map>
-</div> -->
+<!-- <arcgis-map item-id="604562cb499d4e1984b1aed11d961bec" (arcgisViewReadyChange)="arcgisViewReadyChange($event)">
+  <arcgis-expand>
+    <arcgis-search position="top-right"></arcgis-search>
+  </arcgis-expand>
+  <arcgis-legend position="bottom-left"></arcgis-legend>
+</arcgis-map> -->
 
-<div id="viewDiv" style="height: 400px;"></div>
+<!-- <div #mapViewDiv id="mapViewDiv"></div>
+<div id="viewDiv"></div> -->
+
+<div #mapViewNode></div>
