--- a/client/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -3,6 +3,6 @@
     <a routerLink="/map-page" routerLinkActive="active">Map</a> |
     <a routerLink="/activities" routerLinkActive="active">Activities</a> |
     <a routerLink="/about" routerLinkActive="active">About</a> |
-    <a routerLink="/arc-map" routerLinkActive="active">Arc Map</a> |
+    <a routerLink="/arc-map-page" routerLinkActive="active">Arc Map</a> |
     <a routerLink="/login" routerLinkActive="active">Log In</a>
 </nav>
