arGIS map works. Needs styling. Pulling a webmap currently

--- a/client/src/app/arc-map/arc-map.component.html
+++ b/client/src/app/arc-map/arc-map.component.html
@@ -1,11 +1,10 @@
-<!-- <arcgis-map item-id="604562cb499d4e1984b1aed11d961bec" (arcgisViewReadyChange)="arcgisViewReadyChange($event)">
-  <arcgis-expand>
-    <arcgis-search position="top-right"></arcgis-search>
-  </arcgis-expand>
-  <arcgis-legend position="bottom-left"></arcgis-legend>
-</arcgis-map> -->
-
-<!-- <div #mapViewDiv id="mapViewDiv"></div>
-<div id="viewDiv"></div> -->
-
-<div #mapViewNode></div>
+<div id="viewDiv">
+  <!-- //item-id="d5dda743788a4b0688fe48f43ae7beb9" -->
+  <arcgis-map item-id="604562cb499d4e1984b1aed11d961bec" (arcgisViewReadyChange)="arcgisViewReadyChange($event)">
+    <arcgis-expand>
+      <arcgis-search position="top-right"></arcgis-search>
+    </arcgis-expand>
+    <arcgis-legend position="bottom-left"></arcgis-legend>
+  </arcgis-map>
+  
+  </div>
