--- a/client/src/app/arc-map/arc-map.component.scss
+++ b/client/src/app/arc-map/arc-map.component.scss
@@ -1,40 +1,22 @@
-@import url('https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/light/main.css');
-.esri-view {
-  padding: 0;
+#root,
+html,
+body {
+  height: 100vh;
+  width: 100vw;
   margin: 0;
-  height: 100%;
-  width: 100%;
-}
-#mapViewNode {
   padding: 0;
-  margin: 0;
-  height: 100%;
-  width: 100%;
 }
 
-// html,
-// body {
-//   height: 100%;
-//   width: 100%;
-//   margin: 0;
-//   padding: 0;
-// }
+arcgis-map {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 25px;
+  }
 
-// arcgis-map {
-//   height: 100%;  
-//   width: 100%;   
-//   max-height: 600px;  
-//   position: relative; 
-//   overflow: hidden; 
-// }
-
-
-
-// #mapViewDiv {
-//   height: 100%;    /* Set a fixed height or a percentage */
-//   width: 100%;     /* Set a fixed width or a percentage */
-//   max-height: 600px;  /* Optional: Set a max height to prevent it from growing infinitely */
-//   position: relative; /* Ensure it's positioned correctly */
-//   overflow: hidden;   /* Prevent overflow */
-// }
-
+#viewDiv {
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+  }
